# ckanext-somaliland

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
ckanext/: README.md
ckanext/somaliland/: cli.py  helpers.py  plugin.py  views.py
ckanext/somaliland/assets/: script.js  webassets.yml
ckanext/somaliland/logic/: action.py  auth.py  schema.py  validators.py
ckanext/somaliland/public/: somaliland.css
ckanext/somaliland/templates/: footer.html  header.html  page.html
ckanext/somaliland/templates/base/: page.html
ckanext/somaliland/templates/home/: about.html  index.html
ckanext/somaliland/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/somaliland/tests/logic/: test_action.py  test_auth.py  test_validators.py
